main section-01 complete

--- a/index.html
+++ b/index.html
@@ -1,34 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Assignment-01</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./style.css">
-</head>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./style.css" />
+    <script
+      src="https://kit.fontawesome.com/ce3e89301d.js"
+      crossorigin="anonymous"
+    ></script>
+  </head>
 
-<body>
-    <div class="header">
-        <section class="header-section">
-            <h1>All Things Are Possible If You Believe.</h1>
-            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration
-                in some form,
-                by injected humour, or randomised words</p>
+  <body>
+    <header class="header">
+      <section class="header-section">
+        <h1>All Things Are Possible If You Believe.</h1>
+        <p>
+          There are many variations of passages of Lorem Ipsum available, but
+          the majority have suffered alteration in some form, by injected
+          humour, or randomised words
+        </p>
 
-            <button>Contact Us</button>
-        </section>
-    </div>
+        <button><strong>Contact Us</strong></button>
+      </section>
+    </header>
 
-    <main></main>
+    <main>
+      <section class="failure-section">
+        <div class="failure-div-1">
+          <img src="./images/person.png" alt="A person" />
+        </div>
+        <div class="failure-div-2">
+          <h1>My failures of previous year</h1>
+          <p>
+            Contrary to popular belief, Lorem Ipsum is not simply random text.
+            It has roots in a piece of classical Latin literature from 45 BC,
+            making it over 2000 years old. Richard McClintock.
+          </p>
+          <section class="failure-check-section">
+            <div class="failure-check-1">
+              <i class="fa-solid fa-check"></i> Contrary to popular belief, is
+              not simply.
+            </div>
+            <div class="failure-check-2">
+              <i class="fa-solid fa-check"></i> Contrary to popular belief.
+            </div>
+            <div class="failure-check-3">
+              <i class="fa-solid fa-check"></i> Contrary to popular , is not
+              simply.
+            </div>
+            <div class="failure-check-4">
+              <i class="fa-solid fa-check"></i> Contrary to popular belief, is
+              not simply.
+            </div>
+            <div class="failure-check-5">
+              <i class="fa-solid fa-check"></i> Contrary to popular simply.
+            </div>
+          </section>
+        </div>
+      </section>
+    </main>
 
     <footer></footer>
-</body>
-
+  </body>
 </html>
