call-now-section complete

--- a/index.html
+++ b/index.html
@@ -73,6 +73,13 @@
                     </div>
                 </div>
             </section>
+
+            <section class="call-now-section">
+                <div class="call-now-container">
+                    <h1>Always keep a positive mindset</h1>
+                    <button>Call Now</button>
+                </div>
+            </section>
         </main>
 
         <footer></footer>
