--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         </header>
 
         <main>
+            <!-- Failure Section -->
             <section class="failure-section">
                 <div class="failure-div-1">
                     <img src="./images/person.png" alt="A person" />
@@ -48,6 +49,7 @@
                 </div>
             </section>
 
+            <!-- Plan Section -->
             <section class="plan-container">
                 <h1>My Plans</h1>
                 <div class="plans">
@@ -74,14 +76,100 @@
                 </div>
             </section>
 
+            <!-- Call Now Section -->
             <section class="call-now-section">
                 <div class="call-now-container">
                     <h1>Always keep a positive mindset</h1>
-                    <button>Call Now</button>
+                    <button><a href="">Call Now</a></button>
+                </div>
+            </section>
+
+            <!-- For Bonus Mark -->
+            <section class="hero-section">
+                <h1>For Bonus Marks</h1>
+                <div class="hrow-1">
+                    <img src="./images/icons/web.png" alt="Web Icon" />
+                    <p>
+                        A Web Developer is a professional who is responsible for the design and construction of websites. They ensure that sites meet user
+                        expectations by ensuring they look good, run smoothly and offer easy access points with no loading issues between pages or error
+                        messages. <br />
+                        We are looking for an outstanding Web Developer to be responsible for the coding, innovative design and layout of our website. Web
+                        developer responsibilities include building our website from concept all the way to completion from the bottom up, fashioning
+                        everything from the home page to site layout and function.
+                    </p>
+                </div>
+                <div class="hrow-2">
+                    <p>
+                        JavaScript is a programming language that is commonly used to create interactive effects within web browsers. It is a client-side
+                        scripting language, which means that it is executed by the user's web browser rather than on a server. JavaScript is often used in
+                        conjunction with HTML and CSS to create dynamic, user-friendly websites. It is also used to build mobile applications and can be
+                        utilized on the server-side through the use of runtime environments such as Node.js. Some of the key features of JavaScript include
+                        its ability to manipulate the Document Object Model (DOM) in order to change the appearance of a webpage, as well as its support
+                        for object-oriented and functional programming paradigms. Overall, JavaScript is an essential tool for any web developer.
+                    </p>
+                    <img src="./images/icons/js.png" alt="" />
+                </div>
+                <div class="hrow-3">
+                    <img src="./images/icons/smoke.png" alt="" />
+                    <p>
+                        Smoking is harmful to your health in many ways. It can cause cancer, heart disease, stroke, lung diseases, diabetes, and chronic
+                        obstructive pulmonary disease (COPD). It can also cause premature aging and can damage your teeth and gums. Smoking can also harm
+                        the health of those around you, through secondhand smoke. In addition, smoking is expensive and can be a financial burden. It can
+                        also lead to addiction and is difficult to quit. The best way to protect your health and the health of those around you is to never
+                        start smoking or to quit if you do smoke.
+                    </p>
+                </div>
+                <div class="hrow-4">
+                    <p>
+                        Ecommerce, or electronic commerce, refers to the buying and selling of goods or services over the internet. It has revolutionized
+                        the way we shop, making it easier and more convenient to purchase products from anywhere in the world. Ecommerce platforms, such as
+                        online marketplaces or merchant websites, allow businesses to sell their products directly to consumers. In addition to traditional
+                        retail products, ecommerce also includes the sale of digital goods such as music, movies, and software. Ecommerce has greatly
+                        expanded the reach of businesses, allowing them to sell to a global market. It has also made it easier for consumers to compare
+                        prices and find the best deals. Overall, ecommerce has greatly impacted the way we shop and do business.
+                    </p>
+                    <img src="./images/icons/ecom.png" alt="" />
                 </div>
             </section>
         </main>
 
-        <footer></footer>
+        <footer>
+            <section class="footer-section">
+                <div class="col-1">
+                    <h1>FUTURE</h1>
+                    <br />
+                    <p>
+                        There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected
+                        humour, or randomised words <br />
+                    </p>
+                    <br />
+                    <p>Email : info@gmail.com</p>
+                    <br />
+                    <p>Phone : 01500 00 00 00</p>
+                    <br />
+                    <br />
+
+                    <button>
+                        <a href="#"><img src="./images/icons/fb.png" alt="" /></a>
+                    </button>
+
+                    <button>
+                        <a href=""><img src="./images/icons/twitter.png" alt="" /></a>
+                    </button>
+
+                    <button>
+                        <a href=""><img src="./images/icons/youtube.png" alt="" /></a>
+                    </button>
+                </div>
+                <div class="col-2">
+                    <h3>Subscribe</h3>
+                    <br />
+                    <input type="email" name="" id="" placeholder="Enter your email" />
+                    <br />
+                    <br />
+                    <button><a href="">Subscribe</a></button>
+                </div>
+            </section>
+        </footer>
     </body>
 </html>
