--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;600;700&display=swap" rel="stylesheet" />
         <link rel="stylesheet" href="./style.css" />
         <script src="https://kit.fontawesome.com/ce3e89301d.js" crossorigin="anonymous"></script>
+        <link rel="shortcut icon" href="./images/icons/web.png" type="image/x-icon" />
     </head>
 
     <body>
