At last completed. Now just chill and practise.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     humour, or randomised words
                 </p>
 
-                <button><strong>Contact Us</strong></button>
+                <button><strong><a href="#">Contact Us</a></strong></button>
             </section>
         </header>
 
